--- a/css/employees.css
+++ b/css/employees.css
@@ -22,7 +22,7 @@ p {
     position: fixed;
     height: 100%;
     padding: 24px;
-    width: 15%;
+    width: 14%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -45,8 +45,10 @@ p {
 #right-content {
     position: absolute;
     left:18%;
-    width: 78%;
+    width: 79%;
     padding: 24px;
+    background-color: white;
+    
 }
 
 .cover-all {
@@ -252,12 +254,12 @@ input::placeholder {
     width: 100%;
     border-radius: 8px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-    padding: 16px;
 }
 
 table {
     width: 100%;
     color:#2c2c2c;
+    border-collapse: collapse;
 }
 
 th {
@@ -267,9 +269,13 @@ th {
 }
 
 td, th {
-    border-top: 1px solid #dddddd;
+    border: none;
     text-align: left;
-    padding: 8px; 
+    padding: 12px 20px; 
+}
+
+tr {
+    border-bottom:  1px solid #dddddd;; 
 }
 
 tr:hover {
